--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 <input id="declarationCheckbox" name="declaration" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
                             </div>
                             <div class="ml-3 text-sm">
-                                <label for="declarationCheckbox" class="font-medium text-gray-700">I declare all information is correct. I am responsible for any mistakes.</label>
+                                <label for="declarationCheckbox" class="font-medium text-gray-700">"I certify that the information provided is accurate and complete. I understand that this submission is final and cannot be modified."</label>
                             </div>
                         </div>
                     </fieldset>
@@ -3067,6 +3067,7 @@
     </script>
 </body>
 </html>
+
 
 
 
