--- a/index.html
+++ b/index.html
@@ -199,14 +199,20 @@
                                 <input id="declarationCheckbox" name="declaration" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
                             </div>
                             <div class="ml-3 text-sm">
-                                <label for="declarationCheckbox" class="font-medium text-gray-700">I declare all information is correct. I am responsible for any mistakes.</label>
+                                <label for="declarationCheckbox" class="font-medium text-gray-700">I declare that all information submitted above is correct. I am responsible for any mistakes.</label>
                             </div>
                         </div>
                     </fieldset>
                     
 </div>
+<fieldset class="space-y-2">
+                        <div class="relative flex items-start">
+                            <div class="flex h-5 items-center">
+                                <input id="declarationCheckbox" name="declaration" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
+                            </div>
+
                             <div class="ml-3 text-sm">
-                                <label for="declarationCheckbox" class="font-medium text-gray-700"> I understand that this submission is final and cannot be modified.</label>
+                                <label for="declarationCheckbox" class="font-medium text-gray-700">            I understand that this submission is final and cannot be modified.</label>
                             </div>
                         </div>
                     </fieldset>
