--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                 <input id="declarationCheckbox" name="declaration" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
                             </div>
                             <div class="ml-3 text-sm">
-                                <label for="declarationCheckbox" class="font-medium text-gray-700">I declare that all information submitted above is correct. I am responsible for any mistakes.</label>
+                                <label for="declarationCheckbox" class="font-medium text-gray-700">I declare that I have selected all courses applicable for all semesters. I will be responsible for any mistakes.</label>
                             </div>
                         </div>
                     </fieldset>
@@ -3088,4 +3088,5 @@
     </script>
 </body>
 </html>
+
 
